# ai-python-lab

./: DEVELOPMENT.md  LICENSE  MANIFEST.in  PUBLISH.md  README.md  pyproject.toml  setup.py
ai-python-lab/: __init__.py  exceptions.py  openrouter_client.py
ai_python_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: basic_usage.py
tests/: test_basic.py
